Удалила картинки, вернула одинаковые заголовки, убрала span из кнопок, form

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -84,8 +84,8 @@
               </tr>
             </tbody>
           </table>
-          <a class="button" href="#">
-            <span class="button__button-text">Заказать</span>
+          <a class="button button__button-text" href="#">
+            Заказать
           </a>
         </li>
         <li class="catalog__item card">
@@ -119,8 +119,8 @@
               </tr>
             </tbody>
           </table>
-          <a class="button" href="#">
-            <span class="button__button-text">Заказать</span>
+          <a class="button button__button-text" href="#">
+            Заказать
           </a>
         </li>
         <li class="catalog__item card">
@@ -154,8 +154,8 @@
               </tr>
             </tbody>
           </table>
-          <a class="button" href="#">
-            <span class="button__button-text">Заказать</span>
+          <a class="button button__button-text" href="#">
+            Заказать
           </a>
         </li>
         <li class="catalog__item card">
@@ -189,8 +189,8 @@
               </tr>
             </tbody>
           </table>
-          <a class="button" href="#">
-            <span class="button__button-text">Заказать</span>
+          <a class="button button__button-text" href="#">
+            Заказать
           </a>
         </li>
         <li class="catalog__item card">
@@ -224,8 +224,8 @@
               </tr>
             </tbody>
           </table>
-          <a class="button" href="#">
-            <span class="button__button-text">Заказать</span>
+          <a class="button button__button-text" href="#">
+            Заказать
           </a>
         </li>
         <li class="catalog__item card">
@@ -259,8 +259,8 @@
               </tr>
             </tbody>
           </table>
-          <a class="button" href="#">
-            <span class="button__button-text">Заказать</span>
+          <a class="button button__button-text" href="#">
+            Заказать
           </a>
         </li>
         <li class="catalog__item card">
@@ -294,8 +294,8 @@
               </tr>
             </tbody>
           </table>
-          <a class="button" href="#">
-            <span class="button__button-text">Заказать</span>
+          <a class="button button__button-text" href="#">
+            Заказать
           </a>
         </li>
         <li class="catalog__item card">
@@ -305,15 +305,15 @@
             </h3>
           </a>
           <p class="card__item-description">На самом деле вкусов гораздо больше!</p>
-          <a class="button button--second" href="#">
-            <span class="button__button-text button__button-text--second">Показать все</span>
+          <a class="button button--second button__button-text button__button-text--second" href="#">
+            Показать все
           </a>
         </li>
       </ul>
 
     </section>
     <section class="sub-products">
-      <h2 class="sub-products__header">Дополнительные товары</h2>
+      <h2 class="sub-products__header catalog-subheader">Дополнительные товары</h2>
       <ul class="sub-products__list">
         <li class="sub-products__item">
           <h3 class="sub-products__item-title">Сахарозаменитель</h3>
@@ -321,8 +321,8 @@
             <span class="sub-products__text">1 упаковка (100 г)</span>
             <span class="sub-products__text">200 ₽</span>
           </div>
-          <a class="button" href="#">
-            <span class="button__button-text">Заказать</span>
+          <a class="button button__button-text" href="#">
+            Заказать
           </a>
         </li>
         <li class="sub-products__item">
@@ -331,8 +331,8 @@
             <span class="sub-products__text">5 литров</span>
             <span class="sub-products__text">50 ₽</span>
           </div>
-          <a class="button" href="#">
-            <span class="button__button-text">Заказать</span>
+          <a class="button button__button-text" href="#">
+            Заказать
           </a>
         </li>
         <li class="sub-products__item">
@@ -341,8 +341,8 @@
             <span class="sub-products__text">1 литр</span>
             <span class="sub-products__text">100 ₽</span>
           </div>
-          <a class="button" href="#">
-            <span class="button__button-text">Заказать</span>
+          <a class="button button__button-text" href="#">
+            Заказать
           </a>
         </li>
         <li class="sub-products__item">
@@ -351,8 +351,8 @@
             <span class="sub-products__text">1 упаковка (30 г)</span>
             <span class="sub-products__text">300 ₽</span>
           </div>
-          <a class="button" href="#">
-            <span class="button__button-text">Заказать</span>
+          <a class="button button__button-text" href="#">
+            Заказать
           </a>
         </li>
       </ul>
@@ -363,15 +363,15 @@
       </div>
     </section>
     <section class="actions">
-      <h2 class="actions__header">Акции и новинки</h2>
+      <h2 class="actions__header catalog-subheader">Акции и новинки</h2>
       <p class="actions__description">Подпишитесь на наши новости и не пропустите ни одного предложения!</p>
-      <div class="actions__subscribe">
+      <form action="submit">
         <label for="subscribe-email"></label>
         <input name="subscribe-email" id="subscribe-email" type="email" placeholder="кuklachev@gmail.com">
-        <button class="button" type="button">
-          <span class="button__button-text button__button-text--third">Подписаться</span>
+        <button class="button button__button-text button__button-text--third" type="button">
+          Подписаться
         </button>
-      </div>
+      </form>
     </section>
   </main>
   <footer class="main-footer">
