--- a/source/index.html
+++ b/source/index.html
@@ -60,8 +60,8 @@
         <img class="promo__promo-image" src="images/index-can-mobile@1x.png" srcset="images/index-can-mobile@2x.png 2x" alt="Промо фото продукции" width="280" height="270">
       </picture>
 
-      <a class="button" href="#">
-        <span class="button__button-text">Подобрать программу</span>
+      <a class="button button__button-text" href="#">
+        Подобрать программу
       </a>
     </section>
   </header>
