Добавила картинки, поправила классы кнопок

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -84,7 +84,7 @@
               </tr>
             </tbody>
           </table>
-          <a class="button button__button-text" href="#">
+          <a class="button" href="#">
             Заказать
           </a>
         </li>
@@ -119,7 +119,7 @@
               </tr>
             </tbody>
           </table>
-          <a class="button button__button-text" href="#">
+          <a class="button" href="#">
             Заказать
           </a>
         </li>
@@ -154,7 +154,7 @@
               </tr>
             </tbody>
           </table>
-          <a class="button button__button-text" href="#">
+          <a class="button" href="#">
             Заказать
           </a>
         </li>
@@ -189,7 +189,7 @@
               </tr>
             </tbody>
           </table>
-          <a class="button button__button-text" href="#">
+          <a class="button" href="#">
             Заказать
           </a>
         </li>
@@ -224,7 +224,7 @@
               </tr>
             </tbody>
           </table>
-          <a class="button button__button-text" href="#">
+          <a class="button" href="#">
             Заказать
           </a>
         </li>
@@ -259,7 +259,7 @@
               </tr>
             </tbody>
           </table>
-          <a class="button button__button-text" href="#">
+          <a class="button" href="#">
             Заказать
           </a>
         </li>
@@ -294,7 +294,7 @@
               </tr>
             </tbody>
           </table>
-          <a class="button button__button-text" href="#">
+          <a class="button" href="#">
             Заказать
           </a>
         </li>
@@ -305,7 +305,7 @@
             </h3>
           </a>
           <p class="card__item-description">На самом деле вкусов гораздо больше!</p>
-          <a class="button button--second button__button-text button__button-text--second" href="#">
+          <a class="button button--second" href="#">
             Показать все
           </a>
         </li>
@@ -321,7 +321,7 @@
             <span class="sub-products__text">1 упаковка (100 г)</span>
             <span class="sub-products__text">200 ₽</span>
           </div>
-          <a class="button button__button-text" href="#">
+          <a class="button" href="#">
             Заказать
           </a>
         </li>
@@ -331,7 +331,7 @@
             <span class="sub-products__text">5 литров</span>
             <span class="sub-products__text">50 ₽</span>
           </div>
-          <a class="button button__button-text" href="#">
+          <a class="button" href="#">
             Заказать
           </a>
         </li>
@@ -341,7 +341,7 @@
             <span class="sub-products__text">1 литр</span>
             <span class="sub-products__text">100 ₽</span>
           </div>
-          <a class="button button__button-text" href="#">
+          <a class="button" href="#">
             Заказать
           </a>
         </li>
@@ -351,7 +351,7 @@
             <span class="sub-products__text">1 упаковка (30 г)</span>
             <span class="sub-products__text">300 ₽</span>
           </div>
-          <a class="button button__button-text" href="#">
+          <a class="button" href="#">
             Заказать
           </a>
         </li>
@@ -368,7 +368,7 @@
       <form action="submit">
         <label for="subscribe-email"></label>
         <input name="subscribe-email" id="subscribe-email" type="email" placeholder="кuklachev@gmail.com">
-        <button class="button button__button-text button__button-text--third" type="button">
+        <button class="button button--third" type="button">
           Подписаться
         </button>
       </form>
