--- a/source/index.html
+++ b/source/index.html
@@ -60,7 +60,7 @@
         <img class="promo__promo-image" src="images/index-can-mobile@1x.png" srcset="images/index-can-mobile@2x.png 2x" alt="Промо фото продукции" width="280" height="270">
       </picture>
 
-      <a class="button button__button-text" href="#">
+      <a class="button" href="#">
         Подобрать программу
       </a>
     </section>
