Добавила actions в form

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -365,10 +365,10 @@
     <section class="actions">
       <h2 class="actions__header catalog-subheader">Акции и новинки</h2>
       <p class="actions__description">Подпишитесь на наши новости и не пропустите ни одного предложения!</p>
-      <form action="submit">
+      <form action="https://echo.htmlacademy.ru/" method="post">
         <label for="subscribe-email"></label>
         <input name="subscribe-email" id="subscribe-email" type="email" placeholder="кuklachev@gmail.com">
-        <button class="button button--third" type="button">
+        <button class="button button--third" type="submit">
           Подписаться
         </button>
       </form>
