--- a/source/index.html
+++ b/source/index.html
@@ -95,18 +95,35 @@
       <h2 class="functions__header">Как это работает</h2>
       <ul class="functions__list">
         <li class="functions__item">
-          <div class="functions__item-image"></div>
+          <div class="functions__item-image">
+            <svg width="30" height="32">
+              <use href="icons/stack.svg#icon_leaf"></use>
+            </svg>
+          </div>
           <span class="functions__description">Функциональное питание содержит только полезные питательные вещества.</span>
         </li>
         <li class="functions__item">
+          <div class="functions__item-image">
+            <svg width="30" height="32">
+              <use href="icons/stack.svg#icon_vector"></use>
+            </svg>
+          </div>
           <span class="functions__description">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</span>
         </li>
         <li class="functions__item">
-          <div class="functions__item-image"></div>
+          <div class="functions__item-image">
+            <svg width="30" height="32">
+              <use href="icons/stack.svg#icon_eat"></use>
+            </svg>
+          </div>
           <span class="functions__description">Замените один-два приема обычной еды на наше функциональное питание.</span>
         </li>
         <li class="functions__item">
-          <div class="functions__item-image"></div>
+          <div class="functions__item-image">
+            <svg width="30" height="32">
+              <use href="icons/stack.svg#icon_clock"></use>
+            </svg>
+          </div>
           <span class="functions__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</span>
         </li>
       </ul>
