Поправила кнопки programs

--- a/source/index.html
+++ b/source/index.html
@@ -78,14 +78,14 @@
             <h3 class="programs__title">Похудение</h3>
             <p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
             <a class="programs__link button" href="catalog.html">
-              <span class="programs__link-text button__button-text">Каталог SLIM</span>
+              Каталог SLIM
             </a>
           </li>
           <li class="programs__item">
             <h3 class="programs__title">Набор массы</h3>
             <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
             <a class="programs__link button" href="catalog.html">
-              <span class="programs__link-text button__button-text">Каталог SLIM</span>
+              Каталог PRO
             </a>
           </li>
         </ul>
