--- a/source/index.html
+++ b/source/index.html
@@ -75,14 +75,25 @@
         </header>
         <ul class="programs__list">
           <li class="programs__item">
-            <h3 class="programs__title">Похудение</h3>
+            <h3 class="programs__title">
+              <svg width="36" height="50">
+                <use href="icons/stack.svg#cat-slim"></use>
+              </svg>
+              Похудение
+            </h3>
             <p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
             <a class="programs__link button" href="catalog.html">
               Каталог SLIM
             </a>
           </li>
           <li class="programs__item">
-            <h3 class="programs__title">Набор массы</h3>
+            <h3 class="programs__title programs__title--second">
+              <svg width="67" height="28">
+                <circle></circle>
+                <use href="icons/stack.svg#cat-pro"></use>
+              </svg>
+              Набор массы
+            </h3>
             <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
             <a class="programs__link button" href="catalog.html">
               Каталог PRO
