--- a/source/catalog.html
+++ b/source/catalog.html
@@ -395,7 +395,7 @@
       <a class="main-footer__logo" href="#">
         <img class="main-footer__logo-image" src="images/footer-logo.svg" alt="Логотип Заголовок" width="128" height="24">
       </a>
-      <ul class="main-footer__list">
+      <ul class="main-footer__list site-list">
         <li class="main-footer__item">
           <a class="main-footer__link main-footer__link--vk" href="https://vk.com/htmlacademy">
             <span class="visually-hidden">Мы в контакте</span>
