--- a/source/index.html
+++ b/source/index.html
@@ -73,12 +73,9 @@
             Программы контроля веса
           </h2>
         </header>
-        <ul class="programs__list">
+        <ul class="programs__list site-list">
           <li class="programs__item">
             <h3 class="programs__title">
-              <svg width="36" height="50">
-                <use href="icons/stack.svg#cat-slim"></use>
-              </svg>
               Похудение
             </h3>
             <p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
@@ -88,9 +85,6 @@
           </li>
           <li class="programs__item">
             <h3 class="programs__title programs__title--second">
-              <svg width="67" height="28">
-                <use href="icons/stack.svg#cat-pro"></use>
-              </svg>
               Набор массы
             </h3>
             <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
@@ -103,38 +97,18 @@
     </section>
     <section class="functions">
       <h2 class="functions__header">Как это работает</h2>
-      <ul class="functions__list">
-        <li class="functions__item">
-          <div class="functions__item-image">
-            <svg width="30" height="32">
-              <use href="icons/stack.svg#icon_leaf"></use>
-            </svg>
-          </div>
-          <span class="functions__description">Функциональное питание содержит только полезные питательные вещества.</span>
+      <ul class="functions__list site-list">
+        <li class="functions__item functions__item--leaf">
+          Функциональное питание содержит только полезные питательные вещества.
         </li>
-        <li class="functions__item">
-          <div class="functions__item-image">
-            <svg width="30" height="32">
-              <use href="icons/stack.svg#icon_vector"></use>
-            </svg>
-          </div>
-          <span class="functions__description">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</span>
+        <li class="functions__item functions__item--vector">
+          Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
         </li>
-        <li class="functions__item">
-          <div class="functions__item-image">
-            <svg width="30" height="32">
-              <use href="icons/stack.svg#icon_eat"></use>
-            </svg>
-          </div>
-          <span class="functions__description">Замените один-два приема обычной еды на наше функциональное питание.</span>
+        <li class="functions__item functions__item--eat">
+          Замените один-два приема обычной еды на наше функциональное питание.
         </li>
-        <li class="functions__item">
-          <div class="functions__item-image">
-            <svg width="30" height="32">
-              <use href="icons/stack.svg#icon_clock"></use>
-            </svg>
-          </div>
-          <span class="functions__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</span>
+        <li class="functions__item functions__item--clock">
+          Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
         </li>
       </ul>
     </section>
@@ -143,7 +117,7 @@
         <h2 class="example__subheader">Живой пример</h2>
         <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
       </header>
-      <ul class="example__list">
+      <ul class="example__list site-list">
         <li class="example__item">
           <span class="example__item-text">5 кг</span>
           <span class="example__item-text-second">снижение веса</span>
@@ -190,7 +164,7 @@
       <a class="main-footer__logo" href="#">
         <img class="main-footer__logo-image" src="images/footer-logo.svg" alt="Логотип Заголовок" width="128" height="24">
       </a>
-      <ul class="main-footer__list">
+      <ul class="main-footer__list site-list">
         <li class="main-footer__item">
           <a class="main-footer__link main-footer__link--vk" href="https://vk.com/htmlacademy">
             <span class="visually-hidden">Мы в контакте</span>
@@ -198,6 +172,7 @@
         </li>
         <li class="main-footer__item">
           <a class="main-footer__link main-footer__link--youtube" href="https://youtube.com/htmlacademy">
+
             <span class="visually-hidden">Мы в youtube</span>
           </a>
         </li>
@@ -209,7 +184,6 @@
       </ul>
       <a class="academy" href="https://htmlacademy.ru/intensive/adaptive">
         <span class="academy__text">HTML Academy</span>
-        <img class="academy__logo" src="images/logo-html.svg" alt="Logo HTMLAcademy" width="27" height="34">
       </a>
     </section>
   </footer>
