Изменения по 5 разделу после проверки от 09/12/24

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -395,7 +395,7 @@
       <a class="main-footer__logo" href="#">
         <img class="main-footer__logo-image" src="images/footer-logo.svg" alt="Логотип Заголовок" width="128" height="24">
       </a>
-      <ul class="main-footer__list site-list">
+      <ul class="main-footer__list">
         <li class="main-footer__item">
           <a class="main-footer__link main-footer__link--vk" href="https://vk.com/htmlacademy">
             <span class="visually-hidden">Мы в контакте</span>
@@ -403,6 +403,7 @@
         </li>
         <li class="main-footer__item">
           <a class="main-footer__link main-footer__link--youtube" href="https://youtube.com/htmlacademy">
+
             <span class="visually-hidden">Мы в youtube</span>
           </a>
         </li>
@@ -414,7 +415,9 @@
       </ul>
       <a class="academy" href="https://htmlacademy.ru/intensive/adaptive">
         <span class="academy__text">HTML Academy</span>
-        <img class="academy__logo" src="images/logo-html.svg" alt="Logo HTMLAcademy" width="27" height="34">
+        <svg class="academy__logo" width="27" height="34">
+          <use href="icons/stack.svg#logo-html"></use>
+        </svg>
       </a>
     </section>
   </footer>
