--- a/source/index.html
+++ b/source/index.html
@@ -73,7 +73,7 @@
             Программы контроля веса
           </h2>
         </header>
-        <ul class="programs__list site-list">
+        <ul class="programs__list">
           <li class="programs__item">
             <h3 class="programs__title">
               Похудение
@@ -97,7 +97,7 @@
     </section>
     <section class="functions">
       <h2 class="functions__header">Как это работает</h2>
-      <ul class="functions__list site-list">
+      <ul class="functions__list">
         <li class="functions__item functions__item--leaf">
           Функциональное питание содержит только полезные питательные вещества.
         </li>
@@ -164,7 +164,7 @@
       <a class="main-footer__logo" href="#">
         <img class="main-footer__logo-image" src="images/footer-logo.svg" alt="Логотип Заголовок" width="128" height="24">
       </a>
-      <ul class="main-footer__list site-list">
+      <ul class="main-footer__list">
         <li class="main-footer__item">
           <a class="main-footer__link main-footer__link--vk" href="https://vk.com/htmlacademy">
             <span class="visually-hidden">Мы в контакте</span>
@@ -184,6 +184,9 @@
       </ul>
       <a class="academy" href="https://htmlacademy.ru/intensive/adaptive">
         <span class="academy__text">HTML Academy</span>
+        <svg class="academy__logo" width="27" height="34">
+          <use href="icons/stack.svg#logo-html"></use>
+        </svg>
       </a>
     </section>
   </footer>
