--- a/source/catalog.html
+++ b/source/catalog.html
@@ -15,19 +15,23 @@
 
 <body class="page__body">
   <header class="main-header">
-    <nav class="main-nav">
-      <a class="logo" href="index.html">
-        <picture>
-          <source width="70" height="59" type="image/svg+xml" media="(min-width: 1440px)" srcset="images/logo-pic-desktop.svg">
-          <source width="60" height="50" type="image/svg+xml" media="(min-width: 768px)" srcset="images/logo-pic-tablet.svg">
-          <img class="logo__logo-image" src="images/logo-pic-mobile.svg" alt="Логотип Котик" width="33" height="38">
-        </picture>
-        <picture>
-          <source width="101" height="18" type="image/svg+xml" media="(min-width: 768px)" srcset="images/logo-text-tablet.svg">
-          <img class="logo__logo-image" src="images/logo-text-mobile.svg" alt="Логотип Заголовок" width="101" height="18">
-        </picture>
-      </a>
-      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+    <nav class="main-nav wrapper">
+      <div class="main-nav__header">
+        <a class="logo" href="index.html">
+          <picture>
+            <source width="70" height="59" type="image/svg+xml" media="(min-width: 1440px)" srcset="images/logo-pic-desktop.svg">
+            <source width="60" height="50" type="image/svg+xml" media="(min-width: 768px)" srcset="images/logo-pic-tablet.svg">
+            <img class="logo__logo-image" src="images/logo-pic-mobile.svg" alt="Логотип Котик" width="33" height="38">
+          </picture>
+          <picture>
+            <source width="101" height="18" type="image/svg+xml" media="(min-width: 768px)" srcset="images/logo-text-tablet.svg">
+            <img class="logo__logo-image" src="images/logo-text-mobile.svg" alt="Логотип Заголовок" width="101" height="18">
+          </picture>
+        </a>
+        <button class="main-nav__toggle" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
+      </div>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
           <li class="site-list__item site-list__item--active">
@@ -84,6 +88,7 @@
               </tr>
             </tbody>
           </table>
+
           <a class="button" href="#">
             Заказать
           </a>
@@ -312,7 +317,7 @@
       </ul>
 
     </section>
-    <section class="sub-products">
+    <section class="sub-products wrapper">
       <h2 class="sub-products__header catalog-subheader">Дополнительные товары</h2>
       <ul class="sub-products__list">
         <li class="sub-products__item">
@@ -362,7 +367,7 @@
           кота в подарок!</p>
       </div>
     </section>
-    <section class="actions">
+    <section class="actions wrapper">
       <h2 class="actions__header catalog-subheader">Акции и новинки</h2>
       <p class="actions__description">Подпишитесь на наши новости и не пропустите ни одного предложения!</p>
       <form action="https://echo.htmlacademy.ru/" method="post">
@@ -376,49 +381,55 @@
   </main>
   <footer class="main-footer">
     <section class="contacts">
-      <h3 class="contacts__header">приглашаем к сотрудничеству дилеров!</h3>
-      <div class="contacts__address">
-        <span class="contacts__address-text">ул. Большая
-          Конюшенная, д. 19/8</span>
-        <span>Санкт-Петербург</span>
+      <div class="contacts__main wrapper">
+        <h3 class="contacts__header">приглашаем к сотрудничеству дилеров!</h3>
+        <div class="contacts__address">
+          <span class="contacts__address-text">ул. Большая
+            Конюшенная, д. 19/8</span>
+          <span class="contacts__address-text">Санкт-Петербург</span>
+        </div>
       </div>
+
       <picture>
         <source width="1440" height="400" type="image/png" media="(min-width: 1440px)" srcset="images/location-desktop@1x.png 1x, images/location-desktop@2x.png 2x">
         <source width="768" height="400" type="image/png" media="(min-width: 768px)" srcset="images/location-tablet@1x.png 1x, images/location-tablet@2x.png 2x">
         <img class="contacts__map" src="images/location-mobile@1x.png" srcset="images/location-mobile@2x.png 2x" alt="Мы на карте" width="320" height="362">
       </picture>
     </section>
-    <section class="social">
+    <section class="social wrapper">
       <h2 class="visually-hidden">
         Мы в сети
       </h2>
-      <a class="main-footer__logo" href="#">
-        <img class="main-footer__logo-image" src="images/footer-logo.svg" alt="Логотип Заголовок" width="128" height="24">
-      </a>
-      <ul class="main-footer__list">
-        <li class="main-footer__item">
-          <a class="main-footer__link main-footer__link--vk" href="https://vk.com/htmlacademy">
-            <span class="visually-hidden">Мы в контакте</span>
-          </a>
-        </li>
-        <li class="main-footer__item">
-          <a class="main-footer__link main-footer__link--youtube" href="https://youtube.com/htmlacademy">
+      <div class="social__content">
+        <a class="main-footer__logo" href="#">
+          <img class="main-footer__logo-image" src="images/footer-logo.svg" alt="Логотип Заголовок" width="128" height="24">
+        </a>
+        <ul class="main-footer__list">
+          <li class="main-footer__item">
+            <a class="main-footer__link main-footer__link--vk" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">Мы в контакте</span>
+            </a>
+          </li>
+          <li class="main-footer__item">
+            <a class="main-footer__link main-footer__link--youtube" href="https://youtube.com/htmlacademy">
 
-            <span class="visually-hidden">Мы в youtube</span>
-          </a>
-        </li>
-        <li class="main-footer__item">
-          <a class="main-footer__link main-footer__link--telegram" href="https://vk.com/htmlacademy">
-            <span class="visually-hidden">Мы в telegram</span>
-          </a>
-        </li>
-      </ul>
-      <a class="academy" href="https://htmlacademy.ru/intensive/adaptive">
-        <span class="academy__text">HTML Academy</span>
-        <svg class="academy__logo" width="27" height="34">
-          <use href="icons/stack.svg#logo-html"></use>
-        </svg>
-      </a>
+              <span class="visually-hidden">Мы в youtube</span>
+            </a>
+          </li>
+          <li class="main-footer__item">
+            <a class="main-footer__link main-footer__link--telegram" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">Мы в telegram</span>
+            </a>
+          </li>
+        </ul>
+        <a class="academy" href="https://htmlacademy.ru/intensive/adaptive">
+          <span class="academy__text">HTML Academy</span>
+          <svg class="academy__logo" width="27" height="34">
+            <use href="icons/stack.svg#logo-html"></use>
+          </svg>
+        </a>
+      </div>
+
     </section>
   </footer>
 </body>
