--- a/source/index.html
+++ b/source/index.html
@@ -15,7 +15,7 @@
 
 <body class="page__body">
   <header class="main-header">
-    <nav class="main-nav">
+    <nav class="main-nav wrapper">
       <div class="main-nav__header">
         <a class="logo" href="index.html">
           <picture>
@@ -52,10 +52,10 @@
         </ul>
       </div>
     </nav>
-    <section class="promo">
-      <h1 class="promo__main-header">Функциональное питание для котиков</h1>
+    <section class="promo wrapper">
+      <h1 class="promo__main-header">Функциональное питание для котов</h1>
       <p class="promo__slogan">Занялся собой? Займись котом!</p>
-      <picture>
+      <picture class="promo__picture">
         <source width="552" height="499" type="image/png" media="(min-width: 1440px)" srcset="images/index-can-desktop@1x.png 1x, images/index-can-desktop@2x.png 2x">
         <source width="709" height="609" type="image/png" media="(min-width: 768px)" srcset="images/index-can-tablet@1x.png 1x, images/index-can-tablet@2x.png 2x">
         <img class="promo__promo-image" src="images/index-can-mobile@1x.png" srcset="images/index-can-mobile@2x.png 2x" alt="Промо фото продукции" width="280" height="270">
@@ -68,7 +68,7 @@
   </header>
   <main class="main-container">
     <section class="programs">
-      <div class="programs__wrapper">
+      <div class="programs__wrapper wrapper">
         <header class="programs__header">
           <h2 class="visually-hidden">
             Программы контроля веса
@@ -96,7 +96,7 @@
         </ul>
       </div>
     </section>
-    <section class="functions">
+    <section class="functions wrapper">
       <h2 class="functions__header">Как это работает</h2>
       <ul class="functions__list">
         <li class="functions__item functions__item--leaf">
@@ -113,7 +113,7 @@
         </li>
       </ul>
     </section>
-    <section class="example">
+    <section class="example wrapper">
       <header class="example__header">
         <h2 class="example__subheader">Живой пример</h2>
         <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
@@ -149,49 +149,55 @@
   </main>
   <footer class="main-footer">
     <section class="contacts">
-      <h3 class="contacts__header">приглашаем к сотрудничеству дилеров!</h3>
-      <div class="contacts__address">
-        <span class="contacts__address-text">ул. Большая
-          Конюшенная, д. 19/8</span>
-        <span>Санкт-Петербург</span>
+      <div class="contacts__main wrapper">
+        <h3 class="contacts__header">приглашаем к сотрудничеству дилеров!</h3>
+        <div class="contacts__address">
+          <span class="contacts__address-text">ул. Большая
+            Конюшенная, д. 19/8</span>
+          <span class="contacts__address-text">Санкт-Петербург</span>
+        </div>
       </div>
+
       <picture>
         <source width="1440" height="400" type="image/png" media="(min-width: 1440px)" srcset="images/location-desktop@1x.png 1x, images/location-desktop@2x.png 2x">
         <source width="768" height="400" type="image/png" media="(min-width: 768px)" srcset="images/location-tablet@1x.png 1x, images/location-tablet@2x.png 2x">
         <img class="contacts__map" src="images/location-mobile@1x.png" srcset="images/location-mobile@2x.png 2x" alt="Мы на карте" width="320" height="362">
       </picture>
     </section>
-    <section class="social">
+    <section class="social wrapper">
       <h2 class="visually-hidden">
         Мы в сети
       </h2>
-      <a class="main-footer__logo" href="#">
-        <img class="main-footer__logo-image" src="images/footer-logo.svg" alt="Логотип Заголовок" width="128" height="24">
-      </a>
-      <ul class="main-footer__list">
-        <li class="main-footer__item">
-          <a class="main-footer__link main-footer__link--vk" href="https://vk.com/htmlacademy">
-            <span class="visually-hidden">Мы в контакте</span>
-          </a>
-        </li>
-        <li class="main-footer__item">
-          <a class="main-footer__link main-footer__link--youtube" href="https://youtube.com/htmlacademy">
+      <div class="social__content">
+        <a class="main-footer__logo" href="#">
+          <img class="main-footer__logo-image" src="images/footer-logo.svg" alt="Логотип Заголовок" width="128" height="24">
+        </a>
+        <ul class="main-footer__list">
+          <li class="main-footer__item">
+            <a class="main-footer__link main-footer__link--vk" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">Мы в контакте</span>
+            </a>
+          </li>
+          <li class="main-footer__item">
+            <a class="main-footer__link main-footer__link--youtube" href="https://youtube.com/htmlacademy">
 
-            <span class="visually-hidden">Мы в youtube</span>
-          </a>
-        </li>
-        <li class="main-footer__item">
-          <a class="main-footer__link main-footer__link--telegram" href="https://vk.com/htmlacademy">
-            <span class="visually-hidden">Мы в telegram</span>
-          </a>
-        </li>
-      </ul>
-      <a class="academy" href="https://htmlacademy.ru/intensive/adaptive">
-        <span class="academy__text">HTML Academy</span>
-        <svg class="academy__logo" width="27" height="34">
-          <use href="icons/stack.svg#logo-html"></use>
-        </svg>
-      </a>
+              <span class="visually-hidden">Мы в youtube</span>
+            </a>
+          </li>
+          <li class="main-footer__item">
+            <a class="main-footer__link main-footer__link--telegram" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">Мы в telegram</span>
+            </a>
+          </li>
+        </ul>
+        <a class="academy" href="https://htmlacademy.ru/intensive/adaptive">
+          <span class="academy__text">HTML Academy</span>
+          <svg class="academy__logo" width="27" height="34">
+            <use href="icons/stack.svg#logo-html"></use>
+          </svg>
+        </a>
+      </div>
+
     </section>
   </footer>
 </body>
