--- a/source/index.html
+++ b/source/index.html
@@ -52,28 +52,25 @@
         </ul>
       </div>
     </nav>
-    <section class="promo wrapper">
-      <h1 class="promo__main-header">Функциональное питание для котов</h1>
-      <p class="promo__slogan">Занялся собой? Займись котом!</p>
-      <picture class="promo__picture">
+    <section class="promo">
+      <h1 class="promo__main-header wrapper">Функциональное питание для котов</h1>
+      <p class="promo__slogan wrapper">Занялся собой? Займись котом!</p>
+      <picture class="promo__picture wrapper">
         <source width="552" height="499" type="image/png" media="(min-width: 1440px)" srcset="images/index-can-desktop@1x.png 1x, images/index-can-desktop@2x.png 2x">
         <source width="709" height="609" type="image/png" media="(min-width: 768px)" srcset="images/index-can-tablet@1x.png 1x, images/index-can-tablet@2x.png 2x">
         <img class="promo__promo-image" src="images/index-can-mobile@1x.png" srcset="images/index-can-mobile@2x.png 2x" alt="Промо фото продукции" width="280" height="270">
       </picture>
-
-      <a class="button" href="#">
+      <a class="button wrapper" href="#">
         Подобрать программу
       </a>
     </section>
   </header>
   <main class="main-container">
     <section class="programs">
-      <div class="programs__wrapper wrapper">
-        <header class="programs__header">
-          <h2 class="visually-hidden">
-            Программы контроля веса
-          </h2>
-        </header>
+      <div class="wrapper">
+        <h2 class="visually-hidden">
+          Программы контроля веса
+        </h2>
         <ul class="programs__list">
           <li class="programs__item">
             <h3 class="programs__title">
@@ -113,13 +110,13 @@
         </li>
       </ul>
     </section>
-    <section class="example wrapper">
-      <header class="example__header">
+    <section class="example ">
+      <header class="example__header wrapper">
         <h2 class="example__subheader">Живой пример</h2>
         <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
 
       </header>
-      <div class="example__wrapper">
+      <div class="example__wrapper wrapper">
         <ul class="example__list site-list">
           <li class="example__item">
             <span class="example__item-text">5 кг</span>
@@ -134,7 +131,7 @@
           Затраты на питание: 15 000 РУБ.
         </span>
       </div>
-      <div class="cat-slider">
+      <div class="cat-slider wrapper">
         <picture>
           <source width="560" height="512" type="image/png" media="(min-width: 768px)" srcset="images/state-after-tablet@1x.png 1x, images/state-after-tablet@2x.png 2x">
           <img class="cat-slider__image" src="images/state-after-mobile@1x.png" srcset="images/state-after-mobile@2x.png 2x" alt="Фото котика до функционального питания" width="280" height="256">
@@ -158,7 +155,7 @@
         </div>
       </div>
 
-      <picture>
+      <picture class="contacts__map">
         <source width="1440" height="400" type="image/png" media="(min-width: 1440px)" srcset="images/location-desktop@1x.png 1x, images/location-desktop@2x.png 2x">
         <source width="768" height="400" type="image/png" media="(min-width: 768px)" srcset="images/location-tablet@1x.png 1x, images/location-tablet@2x.png 2x">
         <img class="contacts__map" src="images/location-mobile@1x.png" srcset="images/location-mobile@2x.png 2x" alt="Мы на карте" width="320" height="362">
