Переделала Picture и desktop-width

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -19,7 +19,7 @@
       <div class="main-nav__header">
         <a class="logo" href="index.html">
           <picture>
-            <source width="70" height="59" type="image/svg+xml" media="(min-width: 1440px)" srcset="images/logo-pic-desktop.svg">
+            <source width="70" height="59" type="image/svg+xml" media="(min-width: 1280px)" srcset="images/logo-pic-desktop.svg">
             <source width="60" height="50" type="image/svg+xml" media="(min-width: 768px)" srcset="images/logo-pic-tablet.svg">
             <img class="logo__logo-image" src="images/logo-pic-mobile.svg" alt="Логотип Котик" width="33" height="38">
           </picture>
@@ -54,13 +54,13 @@
     </nav>
   </header>
   <main class="main-container">
-    <section class="catalog">
-      <h1 class="catalog__header wrapper">Каталог продукции</h1>
+    <section class="catalog wrapper">
+      <h1 class="catalog__header">Каталог продукции</h1>
       <ul class="catalog__list">
         <li class="catalog__item card">
           <a class="card__item-link link" href="#">
             <picture class="card__image">
-              <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/pro500-desktop@1x.png 1x, images/pro500-desktop@2x.png 2x">
+              <source width="169" height="210" type="image/png" media="(min-width: 1280px)" srcset="images/pro500-desktop@1x.png 1x, images/pro500-desktop@2x.png 2x">
               <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/pro500-tablet@1x.png 1x, images/pro500-tablet@2x.png 2x">
               <img class="card__image" src="images/pro500-mobile@1x.png" srcset="images/pro500-mobile@2x.png 2x" alt="Cat Energy Pro" width="140" height="107">
             </picture>
@@ -104,7 +104,7 @@
           </a>
           <a class="card__item-link link" href="#">
             <picture>
-              <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/pro1000-desktop@1x.png 1x, images/pro1000-desktop@2x.png 2x">
+              <source width="169" height="210" type="image/png" media="(min-width: 1280px)" srcset="images/pro1000-desktop@1x.png 1x, images/pro1000-desktop@2x.png 2x">
               <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/pro1000-tablet@1x.png 1x, images/pro1000-tablet@2x.png 2x">
               <img class="card__image" src="images/pro1000-mobile@1x.png" srcset="images/pro1000-mobile@2x.png 2x" alt="Cat Energy Pro" width="140" height="107">
             </picture>
@@ -139,7 +139,7 @@
           </a>
           <a class="card__item-link link" href="#">
             <picture>
-              <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/pro500-2-desktop@1x.png 1x, images/pro500-2-desktop@2x.png 2x">
+              <source width="169" height="210" type="image/png" media="(min-width: 1280px)" srcset="images/pro500-2-desktop@1x.png 1x, images/pro500-2-desktop@2x.png 2x">
               <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/pro500-2-tablet@1x.png 1x, images/pro500-2-tablet@2x.png 2x">
               <img class="card__image" src="images/pro500-2-mobile@1x.png" srcset="images/pro500-2-mobile@2x.png 2x" alt="Cat Energy Pro" width="140" height="107">
             </picture>
@@ -174,7 +174,7 @@
           </a>
           <a class="card__item-link link" href="#">
             <picture>
-              <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/pro1000-2-desktop@1x.png 1x, images/pro1000-2-desktop@2x.png 2x">
+              <source width="169" height="210" type="image/png" media="(min-width: 1280px)" srcset="images/pro1000-2-desktop@1x.png 1x, images/pro1000-2-desktop@2x.png 2x">
               <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/pro1000-2-tablet@1x.png 1x, images/pro1000-2-tablet@2x.png 2x">
               <img class="card__image" src="images/pro1000-2-mobile@1x.png" srcset="images/pro1000-2-mobile@2x.png 2x" alt="Cat Energy Pro" width="140" height="107">
             </picture>
@@ -209,7 +209,7 @@
           </a>
           <a class="card__item-link link" href="#">
             <picture>
-              <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/slim500-desktop@1x.png 1x, images/slim500-desktop@2x.png 2x">
+              <source width="169" height="210" type="image/png" media="(min-width: 1280px)" srcset="images/slim500-desktop@1x.png 1x, images/slim500-desktop@2x.png 2x">
               <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/slim500-tablet@1x.png 1x, images/slim500-tablet@2x.png 2x">
               <img class="card__image" src="images/slim500-mobile@1x.png" srcset="images/slim500-mobile@2x.png 2x" alt="Cat Energy Slim" width="140" height="107">
             </picture>
@@ -244,7 +244,7 @@
           </a>
           <a class="card__item-link link" href="#">
             <picture>
-              <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/slim1000-desktop@1x.png 1x, images/slim1000-desktop@2x.png 2x">
+              <source width="169" height="210" type="image/png" media="(min-width: 1280px)" srcset="images/slim1000-desktop@1x.png 1x, images/slim1000-desktop@2x.png 2x">
               <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/slim1000-tablet@1x.png 1x, images/slim1000-tablet@2x.png 2x">
               <img class="card__image" src="images/slim1000-mobile@1x.png" srcset="images/slim1000-mobile@2x.png 2x" alt="Cat Energy Slim" width="140" height="107">
             </picture>
@@ -279,7 +279,7 @@
           </a>
           <a class="card__item-link link" href="#">
             <picture>
-              <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/slim500-2-desktop@1x.png 1x, images/slim500-2-desktop@2x.png 2x">
+              <source width="169" height="210" type="image/png" media="(min-width: 1280px)" srcset="images/slim500-2-desktop@1x.png 1x, images/slim500-2-desktop@2x.png 2x">
               <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/slim500-2-tablet@1x.png 1x, images/slim500-2-tablet@2x.png 2x">
               <img class="card__image" src="images/slim500-2-mobile@1x.png" srcset="images/slim500-2-mobile@2x.png 2x" alt="Cat Energy Slim" width="140" height="107">
             </picture>
@@ -392,16 +392,16 @@
       </div>
 
       <picture>
-        <source width="1440" height="400" type="image/png" media="(min-width: 1440px)" srcset="images/location-desktop@1x.png 1x, images/location-desktop@2x.png 2x">
+        <source width="1280" height="400" type="image/png" media="(min-width: 1280px)" srcset="images/location-desktop@1x.png 1x, images/location-desktop@2x.png 2x">
         <source width="768" height="400" type="image/png" media="(min-width: 768px)" srcset="images/location-tablet@1x.png 1x, images/location-tablet@2x.png 2x">
         <img class="contacts__map" src="images/location-mobile@1x.png" srcset="images/location-mobile@2x.png 2x" alt="Мы на карте" width="320" height="362">
       </picture>
     </section>
-    <section class="social wrapper">
+    <section class="social">
       <h2 class="visually-hidden">
         Мы в сети
       </h2>
-      <div class="social__content">
+      <div class="social__content wrapper">
         <a class="main-footer__logo" href="#">
           <img class="main-footer__logo-image" src="images/footer-logo.svg" alt="Логотип Заголовок" width="128" height="24">
         </a>
