--- a/source/index.html
+++ b/source/index.html
@@ -19,7 +19,7 @@
       <div class="main-nav__header">
         <a class="logo" href="index.html">
           <picture>
-            <source width="70" height="59" type="image/svg+xml" media="(min-width: 1440px)" srcset="images/logo-pic-desktop.svg">
+            <source width="70" height="59" type="image/svg+xml" media="(min-width: 1280px)" srcset="images/logo-pic-desktop.svg">
             <source width="60" height="50" type="image/svg+xml" media="(min-width: 768px)" srcset="images/logo-pic-tablet.svg">
             <img class="logo__logo-image" src="images/logo-pic-mobile.svg" alt="Логотип Котик" width="33" height="38">
           </picture>
@@ -56,7 +56,7 @@
       <h1 class="promo__main-header wrapper">Функциональное питание для котов</h1>
       <p class="promo__slogan wrapper">Занялся собой? Займись котом!</p>
       <picture class="promo__picture wrapper">
-        <source width="552" height="499" type="image/png" media="(min-width: 1440px)" srcset="images/index-can-desktop@1x.png 1x, images/index-can-desktop@2x.png 2x">
+        <source width="552" height="499" type="image/png" media="(min-width: 1280px)" srcset="images/index-can-desktop@1x.png 1x, images/index-can-desktop@2x.png 2x">
         <source width="709" height="609" type="image/png" media="(min-width: 768px)" srcset="images/index-can-tablet@1x.png 1x, images/index-can-tablet@2x.png 2x">
         <img class="promo__promo-image" src="images/index-can-mobile@1x.png" srcset="images/index-can-mobile@2x.png 2x" alt="Промо фото продукции" width="280" height="270">
       </picture>
@@ -156,16 +156,16 @@
       </div>
 
       <picture class="contacts__map">
-        <source width="1440" height="400" type="image/png" media="(min-width: 1440px)" srcset="images/location-desktop@1x.png 1x, images/location-desktop@2x.png 2x">
+        <source width="1280" height="400" type="image/png" media="(min-width: 1280px)" srcset="images/location-desktop@1x.png 1x, images/location-desktop@2x.png 2x">
         <source width="768" height="400" type="image/png" media="(min-width: 768px)" srcset="images/location-tablet@1x.png 1x, images/location-tablet@2x.png 2x">
         <img class="contacts__map" src="images/location-mobile@1x.png" srcset="images/location-mobile@2x.png 2x" alt="Мы на карте" width="320" height="362">
       </picture>
     </section>
-    <section class="social wrapper">
+    <section class="social">
       <h2 class="visually-hidden">
         Мы в сети
       </h2>
-      <div class="social__content">
+      <div class="social__content wrapper">
         <a class="main-footer__logo" href="#">
           <img class="main-footer__logo-image" src="images/footer-logo.svg" alt="Логотип Заголовок" width="128" height="24">
         </a>
