--- a/source/index.html
+++ b/source/index.html
@@ -55,7 +55,7 @@
     <section class="promo">
       <h1 class="promo__main-header wrapper">Функциональное питание для котов</h1>
       <p class="promo__slogan wrapper">Занялся собой? Займись котом!</p>
-      <picture class="promo__picture wrapper">
+      <picture class="promo__picture">
         <source width="552" height="499" type="image/png" media="(min-width: 1280px)" srcset="images/index-can-desktop@1x.png 1x, images/index-can-desktop@2x.png 2x">
         <source width="709" height="609" type="image/png" media="(min-width: 768px)" srcset="images/index-can-tablet@1x.png 1x, images/index-can-tablet@2x.png 2x">
         <img class="promo__promo-image" src="images/index-can-mobile@1x.png" srcset="images/index-can-mobile@2x.png 2x" alt="Промо фото продукции" width="280" height="270">
@@ -67,7 +67,7 @@
   </header>
   <main class="main-container">
     <section class="programs">
-      <div class="wrapper">
+      <div class="programs_wrapper wrapper">
         <h2 class="visually-hidden">
           Программы контроля веса
         </h2>
