--- a/source/catalog.html
+++ b/source/catalog.html
@@ -69,7 +69,7 @@
           </a>
           <div class="card__content">
             <h3 class="card__item-title">
-              <a class="card__item-link link" href="#">
+              <a class="card__item-link card__item-title link" href="#">
                 Cat&nbsp;Energy
                 PRO
                 500 г
@@ -141,7 +141,7 @@
           </a>
           <div class="card__content">
             <h3 class="card__item-title">
-              <a class="card__item-link link" href="#">
+              <a class="card__item-link card__item-title link" href="#">
                 Cat&nbsp;Energy
                 PRO
                 500 г
@@ -316,7 +316,7 @@
           </a>
         </li>
         <li class="catalog__item card card--more">
-          <div class="card__content--more">
+          <div class="card__content card__content--more">
             <svg class="card__plus" width="30" height="30">
               <use href="icons/stack.svg#plus"></use>
             </svg>
